--- a/padics.Rmd
+++ b/padics.Rmd
@@ -21,13 +21,180 @@ output:
 
 This page is not meant to be a formal presentation on p-adics, but rather some basic calculations and snippets of code to clarify some points.
 
-The typical presentation of p-adics focuses on the integers as power sums expanding to infinity on to the left as in $\mathbb Z_3,$ corresponding to the 3-adics. For example, in this system the number $3$ is
+Simple algorithm compared to long division based on a couple of examples:
 
-$$...00000000000000000011 =  2 \cdot 2^1 + 1 \cdot 2^0 $$
+Based on [this YT presentation](https://youtu.be/cP0-69P2lJw?si=MzQmGH3S_VS1pEa-), let's look first at the decimal expansion of $1/3$:
+
+$$\frac 1 3 = \frac {c_1}{10} + \frac {c_2}{10^2} + \frac {c_3}{10^3}+ \dots  $$
+
+Multiplying $\times 3$
+
+$$1= 3\left( \frac {c_1}{10} + \frac {c_2}{10^2} + \frac {c_3}{10^3}+ \dots \right)  $$
+
+gets us to the point when we have to add a zero $0$ to the right of $1$ to find $c_1$ (i.e. multiply $\times 10$. Naturally, $c_0=0.$
+
+
+$$10 = 3\left( c_1 + \frac {c_2}{10^1} + \frac {c_3}{10^2}+ \dots \right) $$
+
+Now $3 c_1=10 \implies c_1 = 3$ and
+
+$$1=10 - 9 = 3\left( \frac {c_2}{10^1} + \frac {c_3}{10^2}+ \dots \right) $$
+
+Again we have to multiply by ten:
+
+$$10 = 3\left(c_2 + \frac{c_3}{10^1}+ \dots \right)$$
+
+and we see that $C_2=3.$ Etcetera.
+
+This is mirrored in the p-adics. For instance, $1/3$ in $\mod \mathbb Q_5:$
+
+
+$$1 = 3\left(a_0 + a_1\, p + a_2 \, p^2+ \dots \right) $$
+
+will result in $$a_0= 2$$ 
+
+because $3\times 2 = 6 \equiv 1 \mod(5).$ 
+
+$$1 = 3\left(2 + a_1\, p + a_2 \, p^2+ \dots \right) $$
+
+Subtracting from both sides:
+
+$$1 - 6= -5 = 3\left(a_1\, p + a_2 \, p^2+ \dots \right)$$
+
+Since we are operating $\mod(5)$ the result on the LHS will be a multiple of $5$. Now dividing by $5$ on both sides:
+
+$$4 \mod(5) \equiv -1 = 3\left(a_1 + a_2 \, p^1+ \dots \right)$$
+
+will yield $$a_1 = 3$$ 
+
+since $3 \times 3 = 9\equiv 4 \mod(5).$
+
+Rinse and repeat:
+
+$$-1 - 9= -10 = 3\left(a_2\, p + a_3 \, p^2+ \dots \right)$$
+
+Divide by $5$:
+
+$$3 \mod(5) \equiv -2 = 3\left(a_2 + a_3 \, p+ \dots \right)$$
+
+yielding 
+
+$$a_2=1$$
+
+Rinse and repeat:
+
+$$-2-3=-5 = 3\left( a_3\,p+ a_4\,p^2\dots \right)$$
+
+Divide by $5$:
+
+$$4 \mod(5)\equiv -1 = 3\left( a_3+ a_4\,p\dots \right)$$
+
+so $$a_3=3$$ 
+
+Et cetera.
+
+
+In SageMath:
+
+```
+padic_printing.mode('digits')
+print(Qp(5)(1/3))
+...31313131313131313132
+padic_printing.mode('series')
+print(Qp(5)(1/3))
+2 + 3*5 + 5^2 + 3*5^3 + 5^4 + 3*5^5 + 5^6 + 3*5^7 + 5^8 + 3*5^9 + 5^10 + 3*5^11 + 5^12 + 3*5^13 + 5^14 + 3*5^15 + 5^16 + 3*5^17 + 5^18 + 3*5^19 + O(5^20)
+```
+
+Another example: $2/3$ in $5$-adic:
+
+In Sagemath:
+
+```
+padic_printing.mode('digits')
+print(Qp(5)(2/3))
+...13131313131313131314
+padic_printing.mode('series')
+print(Qp(5)(2/3))
+4 + 5 + 3*5^2 + 5^3 + 3*5^4 + 5^5 + 3*5^6 + 5^7 + 3*5^8 + 5^9 + 3*5^10 + 5^11 + 3*5^12 + 5^13 + 3*5^14 + 5^15 + 3*5^16 + 5^17 + 3*5^18 + 5^19 + O(5^20)
+```
+
+$$2 = 3\left(a_0 + a_1\, p + a_2 \, p^2+ \dots \right) $$
+
+$$a_0=4$$ 
+
+because $3 \times 4 = 12\equiv2 \mod(5)$
+
+Now
+
+$$2-3 \times 4= -10 = 3\left(a_1\, p + a_2 \, p^2+ \dots \right) $$
+
+Divide by $5$
+
+$$3 \mod(5)\equiv -2 = 3\left(a_1 + a_2 \, p+ \dots \right) $$
+
+yields
+
+$$a_1 = 1$$
+
+and therefore
+
+$$-2 -3=-5= 3\left(a_1 + a_2 \, p+ \dots \right) $$
+
+divide by $5$
+
+$$4 \mod(5)\equiv -1 = 3\left( a_2 + a_3\, p+ \dots \right) $$
+
+and 
+
+$$a_2=3$$
+
+Subtract
+
+$$-1 - 9=-10= 3\left(a_3\, p+ \dots \right) $$
+
+Divide by $5$
+
+$$3\mod(5)\equiv-2= 3\left(a_3\, p+ \dots \right) $$
+
+yielding
+
+$a_3=1$
+
+And so on.
+
+Notice that this would break if we tried $1/24$ in $2$-adics:
+
+$$1=24 (a_0+ a_1 \,p + a_2 \,p^2+\dots)$$
+
+because there is no number $n$ such that $24 \, n\equiv 1\mod(2).$ Hence we we'll need the factorization trick explained below with $1/24= 1/3\times 2^{-3}.$
+
+___
+
+
+P-adics expand to infinity on to the left as in $\mathbb Z_3,$ corresponding to the 3-adics. For example, in this system the number $3$ is
+
+$$...00000000000000000010 =  0 \cdot 3^0 + 1 \cdot 3^1 $$. 
+
+The pattern for a $p$-adic number is $a_0 + a_1\,p + a_2\,p^2+\cdots$ with $a_i\in\{0,\dots, p-1\}.$ 
+
+
+
+In Sage
+
+```
+padic_printing.mode('digits')
+print(Zp(3)(3))
+...000000000000000000010
+padic_printing.mode('series')
+print(Zp(3)(3))
+padic_printing.mode('series')
+print(Zp(3)(3))
+```
+
+Notice that this is different from $3 \mod 2$, in which the series is $3 = 1 \times 2^0 + 1 \times 2^1$. 
 
 The negative reals are simply the additive inverses of their positive counterparts, so
-
-$$-1 = ...11111111$$
+$-1 = ...11111111$
 
 Because
 
@@ -35,7 +202,7 @@ $$...11111111 + ...00000001 = ...000000$$
 
 since in base $2$ and summing from right to left, $1 + 1 = 0$ and we carry $1$ to the left to add it to the $1$ in the second position in the expression of $-1.$
 
-Now, how are the finite digits to the right of the period on the right calculated, and where do they come from?
+Now, how are the finite digits ($.011$) to the right of the period calculated in an expression such as $...10101010101010101.011$, and where do they come from?
 
 The issue comes up in the introduction of $\mathbb Q_p$ numbers. For instance, in the case of the 2-adic expression of $\frac 1{24}$. P-adic numbers can be factored as
 
@@ -77,7 +244,7 @@ $$1/24 = ...10101010101010101011 \cdot 2^{-3}$$
 
 but since we are operating in base $2,$ the factor $2^{-3}$ just moves the period to the right, like $10^{-3}$ would in base $10.$ In this way, we get the final result:
 
-$$1/24...10101010101010101.011$$
+$$1/24=...10101010101010101.011$$
 
 or in sagemath
 
