--- a/padics.Rmd
+++ b/padics.Rmd
@@ -15,23 +15,23 @@ output:
 
 ---
 
-### Calculations with p-adics:
+## Calculations with p-adics:
 
 ---
 
-This page is not meant to be a formal presentation on p-adics, but rather some basic calculations and snippets of code to clarify some points.
+### Fractions:
 
 Simple algorithm compared to long division based on a couple of examples:
 
 Based on [this YT presentation](https://youtu.be/cP0-69P2lJw?si=MzQmGH3S_VS1pEa-), let's look first at the decimal expansion of $1/3$:
 
-$$\frac 1 3 = \frac {c_1}{10} + \frac {c_2}{10^2} + \frac {c_3}{10^3}+ \dots  $$
+$$\frac 1 3 = \frac {c_0}{10^0} + \frac {c_1}{10^1} + \frac {c_2}{10^2} + \frac {c_3}{10^3}+ \dots  $$
 
 Multiplying $\times 3$
 
-$$1= 3\left( \frac {c_1}{10} + \frac {c_2}{10^2} + \frac {c_3}{10^3}+ \dots \right)  $$
+$$1= 3\left(\frac {c_0}{10^0} + \frac {c_1}{10^1}  + \frac {c_2}{10^2} + \frac {c_3}{10^3}+ \dots \right)  $$
 
-gets us to the point when we have to add a zero $0$ to the right of $1$ to find $c_1$ (i.e. multiply $\times 10$. Naturally, $c_0=0.$
+$c_0$ (in $\frac{c_0}{10^0}$), multitplied times $3$ doesn't fit into $1$, and hence $c_0$ is $0.\cdots$, and this gets us to the point when we have to add a zero $0$ to the right of $1$ to find $c_1$ (i.e. multiply $\times 10$). Naturally,
 
 
 $$10 = 3\left( c_1 + \frac {c_2}{10^1} + \frac {c_3}{10^2}+ \dots \right) $$
@@ -44,9 +44,14 @@ Again we have to multiply by ten:
 
 $$10 = 3\left(c_2 + \frac{c_3}{10^1}+ \dots \right)$$
 
-and we see that $C_2=3.$ Etcetera.
+and we see that $C_2=3.$ Et cetera.
 
-This is mirrored in the p-adics. For instance, $1/3$ in $\mod \mathbb Q_5:$
+This is mirrored in the p-adics as follows.
+
+#### Calculating p-adic expansions for fractions ($1/3$ in $5$-adic):
+
+
+$1/3$ in $ \mathbb Q_5:$
 
 
 $$1 = 3\left(a_0 + a_1\, p + a_2 \, p^2+ \dots \right) $$
@@ -107,6 +112,8 @@ print(Qp(5)(1/3))
 2 + 3*5 + 5^2 + 3*5^3 + 5^4 + 3*5^5 + 5^6 + 3*5^7 + 5^8 + 3*5^9 + 5^10 + 3*5^11 + 5^12 + 3*5^13 + 5^14 + 3*5^15 + 5^16 + 3*5^17 + 5^18 + 3*5^19 + O(5^20)
 ```
 
+$$...31313131313131313132 = 2 + 3\cdot 5 + 5^2 + 3\cdot 5^3 + 5^4 + 3\cdot 5^5 + 5^6 + 3\cdot 5^7 + 5^8 + 3\cdot 5^9 + 5^{10} + 3\cdot 5^{11} + O(5^{12})$$
+
 Another example: $2/3$ in $5$-adic:
 
 In Sagemath:
@@ -166,20 +173,19 @@ And so on.
 
 Notice that this would break if we tried $1/24$ in $2$-adics:
 
-$$1=24 (a_0+ a_1 \,p + a_2 \,p^2+\dots)$$
+$$1=24\, (a_0+ a_1 \,p + a_2 \,p^2+\dots)$$
 
 because there is no number $n$ such that $24 \, n\equiv 1\mod(2).$ Hence we we'll need the factorization trick explained below with $1/24= 1/3\times 2^{-3}.$
 
 ___
 
 
-P-adics expand to infinity on to the left as in $\mathbb Z_3,$ corresponding to the 3-adics. For example, in this system the number $3$ is
-
-$$...00000000000000000010 =  0 \cdot 3^0 + 1 \cdot 3^1 $$. 
-
-The pattern for a $p$-adic number is $a_0 + a_1\,p + a_2\,p^2+\cdots$ with $a_i\in\{0,\dots, p-1\}.$ 
+#### p-adic expansion of integers:
 
 
+P-adics expand to infinity on to the left as in $\mathbb Z_3,$ corresponding to the $3$-adics. For example, in this system the number $3$ is
+
+$$...00000000000000000010 =  0 \cdot 3^0 + 1 \cdot 3^1 $$ 
 
 In Sage
 
@@ -192,7 +198,32 @@ print(Zp(3)(3))
 3 + O(3^21)
 ```
 
-Notice that this is different from $3 \mod 2$, in which the series is $3 = 1 \times 2^0 + 1 \times 2^1$. 
+For natural numbers, the p-adic representation and the base-p representation are essentially the same. For natural numbers, the p-adic representation will have only a finite number of non-zero terms, effectively reducing to the base-p representation.
+
+For example, compare the $5$-adic expansion of $233$
+
+$$...00000000000000001413 = 3 + 5 + 4\cdot 5^2 + 5^3+\cdots$$
+
+```
+padic_printing.mode('series')
+print(Qp(5)(233))
+3 + 5 + 4*5^2 + 5^3 + O(5^20)
+padic_printing.mode('digits')
+print(Qp(5)(233))
+...00000000000000001413
+```
+
+to the expression mod $5$:
+
+$$233 \mod(5)= 3 + 1 \cdot 5^1 + 4 \cdot 5^2 + 1\cdot 5^3
+$$
+
+```
+a = 233
+base = 5
+print(" + ".join([f"{digit}*{base}^{i}" if i > 0 else str(digit) for i, digit in enumerate(a.digits(base)) if digit]))
+3 + 1*5^1 + 4*5^2 + 1*5^3
+```
 
 The negative reals are simply the additive inverses of their positive counterparts, so
 $-1 = ...11111111$
@@ -203,7 +234,13 @@ $$...11111111 + ...00000001 = ...000000$$
 
 since in base $2$ and summing from right to left, $1 + 1 = 0$ and we carry $1$ to the left to add it to the $1$ in the second position in the expression of $-1.$
 
-Now, how are the finite digits ($.011$) to the right of the period calculated in an expression such as $...10101010101010101.011$, and where do they come from?
+#### Negative exponents in p-adics:
+
+Negative exponents typically come into play when dealing with fractions or representing very small numbers in the p-adic number system.
+
+In the p-adic number system, fractions that involve negative exponents emerge when the denominator of the fraction is divisible by $p$, the base of the system. This is because the p-adic expansion needs to represent the fractional part appropriately by incorporating terms with negative exponents. Let's consider an example in the $5$-adic system: Let's take $1/25$. Convert to $5$-adic Expansion: $1/25=5^{−2}$.
+
+How are the finite digits ($.011$) to the right of the period calculated in an expression such as $...10101010101010101.011$, and where do they come from?
 
 The issue comes up in the introduction of $\mathbb Q_p$ numbers. For instance, in the case of the 2-adic expression of $\frac 1{24}$. P-adic numbers can be factored as
 
@@ -245,7 +282,7 @@ $$1/24 = ...10101010101010101011 \cdot 2^{-3}$$
 
 but since we are operating in base $2,$ the factor $2^{-3}$ just moves the period to the right, like $10^{-3}$ would in base $10.$ In this way, we get the final result:
 
-$$1/24=...10101010101010101.011$$
+$$1/24=...10101010101010101.011=1\cdot2^{-3} + 1\cdot2^{-2}+0\cdot2^{-1}+1\cdot2^{0} + 0\cdot2^{1}+ 1\cdot2^{2}+0\cdot2^{3}+1\cdot2^{4}$$
 
 or in sagemath
 
