--- a/padics.Rmd
+++ b/padics.Rmd
@@ -15,7 +15,7 @@ output:
 
 ---
 
-## Calculations with p-adics:
+### Calculations with p-adics:
 
 ---
 
@@ -234,7 +234,6 @@ whereas base $3$ base expression is
 
 $$0.012101210121\dots_3$$
 
-
 ___
 
 
@@ -312,7 +311,7 @@ where $k$ is an exponent measuring the valuation of the p-adic as $\frac 1{p^k}$
 
 Therefore, in the case of a fraction:
 
-$$\frac m n = \frac m{p^k} \frac 1{\text{unit}}= \frac 1{\text{unit}}p^{-k}$$
+$$\frac m n = \frac m{p^k} \frac 1{\text{unit}}= \frac m{\text{unit}}p^{-k}$$
 
 Applying it to the example of $1/24,$ the denominator can be factorized as $2^3 \cdot 3:$
 
