--- a/padics.Rmd
+++ b/padics.Rmd
@@ -21,6 +21,11 @@ output:
 
 #### Brief introduction:
 
+P-adic numbers are power series:
+
+$$s =\sum_{i=k}^\infty a_ip^i= a_kp^k + a_{k+1}p^{k+1} +a_{k+2}p^{k+2} + \cdots$$
+where $k$ is an integer and $0\leq a_i < p.$ These coefficients are the residue field (see below).
+
 From [this YouTube video](https://youtu.be/vdjYiU6skgE?si=CXvf2qg98P_7sv_J):
 
 The definition of the absolute value of the elements in a field determines the metric, which maps two elements of the field to a positive value.
@@ -31,9 +36,23 @@ The p-adic absolute value is defined as (for $\alpha \in \mathbb Q$)
 $$\left| \alpha \right|_p = \left| p^n \, \frac g h \right|_p = p^{-n}$$
 This takes only discrete values $\left|\cdot\right|\in\{p^n:n\in\mathbb Z\}\cup\{0\}$, since $|0|_p=0$.
 
-For instance for $p=11$ and $\alpha =968/9,$
+For a p-adic number represented as a power series, the absolute value is determined by the lowest exponent term with a non-zero coefficient. The term with the lowest exponent of $p$ signifies the highest power of $p$ that divides the number.
+
+Examples:
+
+For $p=11$ and $\alpha =968/9,$
 
 $$\left|  968/9\right|_{11} = \left| 11^2 \, \frac{8}{9} \right|_{11} = 11^{-2}$$
+
+In SageMath,
+
+```
+x = Qp(11)(968/9) 
+print(abs(x))
+1/121 = 11^2
+```
+
+
 This results in puzzling results for the metric. For instance, with $p=7$ the distance between $2$ and $3$ is greater than between $28814$ and $2$:
 
 $$\left|  28814-2\right|_{7}= \left|  28812\right|_{7}= \left| 7^4 \, 13 \right|_{7} = 7^{-4}=1/2401$$
@@ -54,12 +73,27 @@ $$1 + 2 + 2^2 + 2^3 + 2^4 + \cdots=\frac{1}{1-2}=-1$$
 
 makes sense, based on the fact that the added values (in $2$-adic) are getting smaller and smaller. This is presented by 3B1B in [here](https://youtu.be/XFDM1ip5HdU?si=dQpqMighSDTuanK8).
 
-Examples in $\mathbb Q_5$
+The p-adic norm $\left|x \right|_p = p^{-\nu}$ has **power law behavior**. Because the norm is defined as a power of $p$, the addition of two p-adic numbers cannot result in a norm larger than the larger of the two individual norms. This is a characteristic feature of non-Archimedean spaces, where the usual additive properties of norms are replaced by the strong form of the triangle inequality, $\left|x+y \right|_p \leq \max(\left|x \right|_p, \left|y \right|_p)$.
+
+Visualization of the p-adic norm as an infinity tree, corresponding to the power series. Each branch represents an element of the **residue field**: This is the set of numbers that remain after dividing all integers by $p$. For example, if $p=3$, the residue field would be $\{0, 1, 2\}$ because any integer divided by $3$ leaves a remainder of $0, 1, or 2$. The p-adic numbers are down at the boundary of this infinite tree. The p-adic norm can be interpreted as geodesic distances on this tree.
+
+<img width = 600  src = "padic_distance.png">
+
+
+
+
+
+
+---
+
+Examples of p-adic numbers in $\mathbb Q_5$ (from [here](https://youtu.be/vdjYiU6skgE?si=MG26Jpm-TSUqQUiP&t=724)):
 
 $$
-(1)_{\mathbb Q_5} =1\\
-(5)_{\mathbb Q_5} = (0+ 1\times 5)_{\mathbb Q_5}=10\\
-(-1)_{\mathbb Q_5}=(4 + 4 \cdot 5 + 4 \cdot5^2+\cdots)_{\mathbb Q_5}=...4444
+\begin{align}
+(1)_{\mathbb Q_5} &=1\\
+(5)_{\mathbb Q_5} &= (0+ 1\times 5)_{\mathbb Q_5}=10\\
+(-1)_{\mathbb Q_5} &=(4 + 4 \cdot 5 + 4 \cdot5^2+\cdots)_{\mathbb Q_5}=...4444
+\end{align}
 $$
 because adding $...4444$ to $1$, which is $...000001$ will result in $0$ (additive inverse of one).
 
@@ -77,7 +111,7 @@ Multiplying $\times 3$
 
 $$1= 3\left(\frac {c_0}{10^0} + \frac {c_1}{10^1}  + \frac {c_2}{10^2} + \frac {c_3}{10^3}+ \dots \right)  $$
 
-$c_0$ (in $\frac{c_0}{10^0}$), multitplied times $3$ doesn't fit into $1$, and hence $c_0$ is $0.\cdots$, and this gets us to the point when we have to add a zero $0$ to the right of $1$ to find $c_1$ (i.e. multiply $\times 10$). Naturally,
+$c_0$, in $\frac{c_0}{10^0}$, multitplied times $3$ doesn't fit into $1$, and hence $c_0$ is $0.\cdots$, and this gets us to the point when we have to add a zero $0$ to the right of $1$ to find $c_1$ (i.e. multiply $\times 10$). Naturally,
 
 
 $$10 = 3\left( c_1 + \frac {c_2}{10^1} + \frac {c_3}{10^2}+ \dots \right) $$
@@ -97,7 +131,7 @@ This is mirrored in the p-adics as follows.
 #### Calculating p-adic expansions for fractions ($1/3$ in $5$-adic):
 
 
-$1/3$ in $ \mathbb Q_5:$
+$1/3$ in $\mathbb Q_5:$
 
 
 $$1 = 3\left(a_0 + a_1\, p + a_2 \, p^2+ \dots \right) $$
