--- a/padics.Rmd
+++ b/padics.Rmd
@@ -187,12 +187,12 @@ $$
 \begin{array}{rll}
      & \color{blue}{2}\,\color{red}{3}\,\color{magenta}{1}\,\color{green}{3}\dots  \\[-3pt]
    3 &\enclose{longdiv}{\phantom{0}1}\kern-.2ex \\[-3pt]
-      & \underline{-6} && \hbox{($\color{blue}{2} \times 3 = 6\equiv 1\mod(5)$)} \\[-3pt]
-      &-5\phantom{0}\to -1 && \hbox{($-5/p = -1\equiv 4\mod(5)$)}\,\hbox{($-5/p=3(x_1 + x_2p^1+ x_3p^2+\cdots)$)} \\[-3pt]
+      & \underline{-6} && \hbox{($\color{blue}{2} \times 3 = 6\equiv 1\mod(5)$)}\quad\hbox{($1=3(\color{blue}2 + x_2p^1+ x_3p^2+\cdots)$)} \\[-3pt]
+      &-5\phantom{0}\to -1 && \hbox{($-5/p = -1\equiv 4\mod(5)$)}\quad\hbox{($-5/p=3(x_1 + x_2p^1+ x_3p^2+\cdots)$)} \\[-3pt]
       &\phantom{0000000}\underline{-9\phantom{0}} && \hbox{($\color{red}{3} \times 3 =9 \equiv 4 \mod(5)$)} \\[-3pt]
-      &\phantom{00000}-10 &\to -2 & \hbox{($-10/p = -2\equiv 3\mod(5)$)}\,\hbox{($-10/p=3(x_2+ x_3p+\cdots)$)} \\[-3pt]
+      &\phantom{00000}-10 &\to -2 & \hbox{($-10/p = -2\equiv 3\mod(5)$)}\quad\hbox{($-10/p=3(x_2+ x_3p+\cdots)$)} \\[-3pt]
       &&\phantom{000}\underline{-3} & \hbox{($\color{magenta}{1} \times 3 = 3\equiv 3\mod(5)$)} \\[-3pt]
-       &&\phantom{00}-5 \to -1 & \hbox{($-5/p = -1\equiv 4\mod(5)$)}\,\hbox{($-5/p=3(x_3+\cdots)$)} \\[-3pt]
+       &&\phantom{00}-5 \to -1 & \hbox{($-5/p = -1\equiv 4\mod(5)$)}\quad\hbox{($-5/p=3(x_3+\cdots)$)} \\[-3pt]
        &&\phantom{00000000}-9 & \hbox{($\color{green}{3} \times 3 = 9\equiv 4\mod(5)$)}\\[-3pt]
        &&&\vdots
   \end{array}
@@ -317,6 +317,24 @@ whereas base $3$ base expression is
 
 $$0.012101210121\dots_3$$
 
+Notice that the expansion of $5$ in $3$-adic may look similar in structure:
+
+```
+padic_printing.mode('series')
+print(Qp(3)(5))
+2\cdot 3^0 + 1\cdot 3^1 + O(3^20)
+```
+
+but it ends: after a certain coefficient, the rest are all zeros:
+
+```
+padic_printing.mode('digits')
+print(Qp(3)(5))
+...00000000000000000012
+```
+
+This is the difference between the p-adic expression of an integer and a fraction:  The p-adic representation of a fraction that is not an integer always requires an infinite number of non-zero terms in its expansion in powers of p. It cannot be represented by a finite sum of powers of p. This is equivalent to saying that the p-adic expansion will never terminate with zeros to the left.
+
 ___
 
 
@@ -342,7 +360,7 @@ For natural numbers, the p-adic representation and the base-p representation are
 
 For example, compare the $5$-adic expansion of $233$
 
-$$...00000000000000001413 = 3 + 5 + 4\cdot 5^2 + 5^3+\cdots$$
+$$...00000000000000001413 = 3 \cdot 3^0 + 1 \cdot 5^1 + 4\cdot 5^2 + 1\cdot 5^3+\cdots$$
 
 ```
 padic_printing.mode('series')
