--- a/padics.Rmd
+++ b/padics.Rmd
@@ -187,13 +187,13 @@ $$
 \begin{array}{rll}
      & \color{blue}{2}\,\color{red}{3}\,\color{magenta}{1}\,\color{green}{3}\dots  \\[-3pt]
    3 &\enclose{longdiv}{\phantom{0}1}\kern-.2ex \\[-3pt]
-      & \underline{-6} && \hbox{($\color{blue}{2} \times 3 = 6\equiv 1\mod(5)$)}\quad\hbox{($1=3(\color{blue}2 + x_2p^1+ x_3p^2+\cdots)$)} \\[-3pt]
+      & \underline{-6} && \hbox{($\color{blue}{2} \times 3 = 6\equiv 1\mod(5)$)}\quad\hbox{($1=3(\color{blue}2p^0 +x_1 p^1 + x_2p^2+ x_3p^3+\cdots)$)} \\[-3pt]
       &-5\phantom{0}\to -1 && \hbox{($-5/p = -1\equiv 4\mod(5)$)}\quad\hbox{($-5/p=3(x_1 + x_2p^1+ x_3p^2+\cdots)$)} \\[-3pt]
-      &\phantom{0000000}\underline{-9\phantom{0}} && \hbox{($\color{red}{3} \times 3 =9 \equiv 4 \mod(5)$)} \\[-3pt]
+      &\phantom{0000000}\underline{-9\phantom{0}} && \hbox{($\color{red}{3} \times 3 =9 \equiv 4 \mod(5)$)} \quad\hbox{($-1=3(\color{red}3p^0 + x_2p^1+ x_3p^2+\cdots)$)}\\[-3pt]
       &\phantom{00000}-10 &\to -2 & \hbox{($-10/p = -2\equiv 3\mod(5)$)}\quad\hbox{($-10/p=3(x_2+ x_3p+\cdots)$)} \\[-3pt]
-      &&\phantom{000}\underline{-3} & \hbox{($\color{magenta}{1} \times 3 = 3\equiv 3\mod(5)$)} \\[-3pt]
+      &&\phantom{000}\underline{-3} & \hbox{($\color{magenta}{1} \times 3 = 3\equiv 3\mod(5)$)}\quad\hbox{($-2=3(\color{magenta}1p^0 + x_3p^1+\cdots)$)} \\[-3pt]
        &&\phantom{00}-5 \to -1 & \hbox{($-5/p = -1\equiv 4\mod(5)$)}\quad\hbox{($-5/p=3(x_3+\cdots)$)} \\[-3pt]
-       &&\phantom{00000000}-9 & \hbox{($\color{green}{3} \times 3 = 9\equiv 4\mod(5)$)}\\[-3pt]
+       &&\phantom{00000000}-9 & \hbox{($\color{green}{3} \times 3 = 9\equiv 4\mod(5)$)}\quad\hbox{($-1=3(\color{green}3p^0 +\cdots)$)}\\[-3pt]
        &&&\vdots
   \end{array}
 $$
