--- a/padics.Rmd
+++ b/padics.Rmd
@@ -426,6 +426,17 @@ print(Qp(5)(1/25))
 5^-2 + O(5^18)
 ```
 
+Here is another example of negative exponents, which correspond to digits to the right of the period.  When you see a p-adic number written with digits to the right of a "p-adic point" (or sometimes represented with negative powers of p explicitly), it indicates that the number is not a p-adic integer.  It is a p-adic number that lies in the fraction field of the p-adic integers. In this case it is the $2$-adic expression of $\frac{1}{2^5 \cdot33}:$
+
+```
+padic_printing.mode('digits')
+print(Qp(2)(1/(2^5*33)))
+...111110000011111.00001
+padic_printing.mode('series')
+print(Qp(2)(1/(2^5*33)))
+2^-5 + 1 + 2 + 2^2 + 2^3 + 2^4 + 2^10 + 2^11 + 2^12 + 2^13 + 2^14 + O(2^15)
+```
+
 #### Digits to the right of the period in $p$-adic expressions (e.g. $.011$):
 
 How are the finite digits ($.011$) to the right of the period calculated in an expression such as $...10101010101010101.011$, and where do they come from?
