--- a/padics.Rmd
+++ b/padics.Rmd
@@ -187,11 +187,11 @@ $$
 \begin{array}{rll}
      & \color{blue}{2}\,\color{aqua}{3}\,\color{magenta}{1}\,\color{green}{3}\dots  \\[-3pt]
    3 &\enclose{longdiv}{\phantom{0}\color{brown}{\bf 1}}\kern-.2ex \\[-3pt]
-      & \underline{-\color{orange}{\bf 6}} && \hbox{($\color{blue}{2} \times 3 =\color{orange} 6\equiv \color{brown}\bf 1\mod(5)$)}\quad\hbox{($\color{brown}{\bf 1}=3\,(\color{blue}2\,p^0 +x_1 \,p^1 + x_2 \,p^2+ x_3 \,p^3+\cdots)$)} \\[3pt]
+      & \underline{-\color{orange}{\bf 6}} && \hbox{($\color{blue}{2} \times 3 =\color{orange}{\bf{6}}\equiv \color{brown}{\bf{ 1}}\mod(5)$)}\quad\hbox{($\color{brown}{\bf 1}=3\,(\color{blue}2\,p^0 +x_1 \,p^1 + x_2 \,p^2+ x_3 \,p^3+\cdots)$)} \\[3pt]
       &\color{red}{\bf{-5}}\phantom{0}\to \color{brown}{\bf{-1}} && \hbox{($\frac{\color{red}{\bf{-5}}}{p} = \color{brown}{-1}\equiv 4\mod(5)$)}\quad\hbox{($\frac{\color{red}{\bf{-5}}}{p}=3\,(x_1 + x_2\,p^1+ x_3\,p^2+\cdots)$)} \\[3pt]
       &\phantom{0000000}\underline{-\color{orange}{\bf 9}\phantom{0}} && \hbox{($\color{aqua}{3} \times 3 =\color{orange}{\bf 9} \equiv 4 \mod(5)$)} \quad\hbox{($\color{brown}{\bf{-1}}=3\,(\color{aqua}3\,p^0 + x_2\,p^1+ x_3\,p^2+\cdots)$)}\\[3pt]
-      &\phantom{00000}-10 &\to -2 & \hbox{($-10/p = -2\equiv 3\mod(5)$)}\quad\hbox{($-10/p=3(x_2+ x_3p+\cdots)$)} \\[-3pt]
-      &&\phantom{000}\underline{-3} & \hbox{($\color{magenta}{1} \times 3 = 3\equiv 3\mod(5)$)}\quad\hbox{($-2=3(\color{magenta}1p^0 + x_3p^1+\cdots)$)} \\[-3pt]
+      &\phantom{00000}\color{red}{\bf{-10}} &\to \color{brown}{\bf{-2}} & \hbox{($\frac{\color{red}{\bf{-10}}}{p} = \color{brown}{\bf{-2}}\equiv 3\mod(5)$)}\quad\hbox{($\frac{\color{red}{\bf{-10}}}{p}=3\,(x_2+ x_3\,p+\cdots)$)} \\[3pt]
+      &&\phantom{000}\underline{-\color{orange}{\bf{3}}} & \hbox{($\color{magenta}{1} \times 3 = 3\equiv 3\mod(5)$)}\quad\hbox{($-2=3(\color{magenta}1p^0 + x_3p^1+\cdots)$)} \\[-3pt]
        &&\phantom{00}-5 \to -1 & \hbox{($-5/p = -1\equiv 4\mod(5)$)}\quad\hbox{($-5/p=3(x_3+\cdots)$)} \\[-3pt]
        &&\phantom{00000000}-9 & \hbox{($\color{green}{3} \times 3 = 9\equiv 4\mod(5)$)}\quad\hbox{($-1=3(\color{green}3p^0 +\cdots)$)}\\[-3pt]
        &&&\vdots
