--- a/padics.Rmd
+++ b/padics.Rmd
@@ -185,7 +185,7 @@ Et cetera.
 $$
 \require{enclose}
 \begin{array}{rll}
-     & \color{blue}{2}\,\color{aqua}{3}\,\color{magenta}{1}\,\color{green}{3}\dots  \\[-3pt]
+     & \color{blue}{2}\,\color{aqua}{3}\,\color{magenta}{1}\,\color{lime}{3}\dots  \\[-3pt]
    3 &\enclose{longdiv}{\phantom{0}\color{brown}{\bf 1}}\kern-.2ex \\[-3pt]
       & \underline{-\color{orange}{\bf 6}} && \hbox{($\color{blue}{2} \times 3 =\color{orange}{\bf{6}}\equiv \color{brown}{\bf{ 1}}\mod(5)$)}\quad\hbox{$\color{brown}{\bf 1}=3\,(\color{blue}2\,p^0 +x_1 \,p^1 + x_2 \,p^2+ x_3 \,p^3+\cdots)$} \\[3pt]
       &\color{red}{\bf{-5}}\phantom{0}\to \color{brown}{\bf{-1}} && \hbox{($\frac{\color{red}{\bf{-5}}}{p} = \color{brown}{\bf{-1}}\equiv 4\mod(5)$)}\quad\hbox{$\frac{\color{red}{\bf{-5}}}{p}=3\,(x_1 + x_2\,p^1+ x_3\,p^2+\cdots)$} \\[3pt]
@@ -193,8 +193,9 @@ $$
       &\phantom{000000}\color{red}{\bf{-10}} &\to \color{brown}{\bf{-2}} & \hbox{($\frac{\color{red}{\bf{-10}}}{p} = \color{brown}{\bf{-2}}\equiv 3\mod(5)$)}\quad\hbox{$\frac{\color{red}{\bf{-10}}}{p}=3\,(x_2+ x_3\,p+\cdots)$} \\[3pt]
       &&\phantom{000}\underline{-\color{orange}{\bf{3}}} & \hbox{($\color{magenta}{1} \times 3 = \color{orange}{\bf{3}}\equiv 3\mod(5)$)}\quad\hbox{$\color{brown}{\bf{-2}}=3\,(\color{magenta}1\,p^0 + x_3\,p^1+\cdots)$} \\[3pt]
        &&\phantom{00}\color{red}{\bf{-5}} \to \color{brown}{\bf{-1}} & \hbox{($\frac{\color{red}{\bf{-5}}}{p} = \color{brown}{\bf{-1}}\equiv 4\mod(5)$)}\quad\hbox{$\frac{\color{red}{\bf{-5}}}{p}=3\,(x_3+\cdots)$} \\[3pt]
-       &&\phantom{00000000}-\color{orange}{\bf{9}} & \hbox{($\color{green}{3} \times 3 = \color{orange}{\bf{9}}\equiv 4\mod(5)$)}\quad\hbox{$\color{brown}{\bf{-1}}=3\,(\color{green}3\,p^0 +\cdots)$}\\[-3pt]
-       &&&\vdots
+       &&\phantom{00000000}\underline{-\color{orange}{\bf{9}}} & \hbox{($\color{lime}{3} \times 3 = \color{orange}{\bf{9}}\equiv 4\mod(5)$)}\quad\hbox{$\color{brown}{\bf{-1}}=3\,(\color{lime}3\,p^0 +\cdots)$}\\[2pt]
+       &&\phantom{0000000}\color{red}{\bf{-10}}\\[2pt]
+       &&\phantom{000000000}\vdots
   \end{array}
 $$
 
@@ -287,7 +288,7 @@ because there is no number $n$ such that $24 \, n\equiv 1\mod(2).$ Hence we we'l
 $$
 \require{enclose}
 \begin{array}{rll}
-     & \color{blue}{2}\,\color{red}{0}\,\color{magenta}{1}\,\color{green}{2}\dots  \\[-3pt]
+     & \color{blue}{2}\,\color{red}{0}\,\color{magenta}{1}\,\color{lime}{2}\dots  \\[-3pt]
    5 &\enclose{longdiv}{\phantom{0}1}\kern-.2ex \\[-3pt]
       & \underline{-10} && \hbox{($\color{blue}{2} \times 5 = 10\equiv 1\mod(3)$)} \\[-3pt]
       &-9\phantom{0}\to -3 && \hbox{($-9/p = -3\equiv 0\mod(3)$)}\,\hbox{($-9/p=5(x_1 + x_2p^1+ x_3p^2+\cdots)$)} \\[-3pt]
@@ -295,7 +296,7 @@ $$
       &\phantom{000000}-3 &\to -1 & \hbox{($-3/p = -1\equiv 2\mod(3)$)}\,\hbox{($-3/p=5(x_2+ x_3p+\cdots)$)} \\[-3pt]
       &&\phantom{000}\underline{-5} & \hbox{($\color{magenta}{1} \times 5 = 5\equiv 2\mod(3)$)} \\[-3pt]
        &&\phantom{00}-6 \to -2 & \hbox{($-6/p = -2\equiv 1\mod(3)$)}\,\hbox{($-6/p=5(x_3+\cdots)$)} \\[-3pt]
-       &&\phantom{00000000}-10 & \hbox{($\color{green}{2} \times 5 = 10\equiv 1\mod(3)$)}\\[-3pt]
+       &&\phantom{00000000}-10 & \hbox{($\color{lime}{2} \times 5 = 10\equiv 1\mod(3)$)}\\[-3pt]
        &&&\vdots
   \end{array}
 $$
